--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ main{
    margin-bottom: 50px;
    margin-top: 20px;
   
-    background-color: blue;
+    background-color: rgb(173, 198, 230);
 
 }
 
